desktop/src-tauri/build_errors.txt
    Checking desktop v0.1.0 (C:\Users\Utilizador\AppNotas\desktop\src-tauri)
warning: unused import: `std::path::PathBuf`
 --> src\db.rs:4:5
  |
4 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `path` found for reference `&AppHandle` in the current scope
  --> src\db.rs:23:34
   |
23 |         let app_dir = app_handle.path().app_data_dir().expect("Failed to get app data dir");
   |                                  ^^^^ method not found in `&AppHandle`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `Manager` which provides `path` is implemented but not in scope; perhaps you want to import it
   |
 1 + use tauri::Manager;
   |

For more information about this error, try `rustc --explain E0599`.
warning: `desktop` (lib) generated 1 warning
error: could not compile `desktop` (lib) due to 1 previous error; 1 warning emitted
